# contest-mcp

./: .gitignore  .mcpbignore  CHANGELOG.md  CONTRIBUTING.md  README.md  make_icon.py  manifest.json  pyproject.toml  server.json  smoke_test.py
docs/: INSTALL.md  N3FJP-API-SPEC.md  N3FJP-API.md  REMOTE-HOST.md  TEST-PLAN.md
src/contest_mcp/: __init__.py  client.py  config.py  diag.py  forward.py  methods.py  protocol.py  server.py
tests/: test_client.py  test_forward.py  test_methods.py  test_protocol.py  test_server.py
