[project]
name = "contest-mcp"
version = "0.1.2"
description = "An MCP server for logging amateur-radio QSOs to N3FJP logging software over its TCP API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Stefan Brunner (AE5VG)", email = "me@stefanbrunner.org" },
]
keywords = [
    "n3fjp",
    "mcp",
    "model-context-protocol",
    "ham-radio",
    "amateur-radio",
    "contest",
    "logging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Ham Radio",
]
dependencies = [
    "mcp[cli]>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
contest-mcp = "contest_mcp.server:main"

[project.urls]
Homepage = "https://github.com/sbrunner-atx/contest-mcp"
Repository = "https://github.com/sbrunner-atx/contest-mcp"
Issues = "https://github.com/sbrunner-atx/contest-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contest_mcp"]

# Ruff is a fast linter/formatter; configuring it here is a sign of a maintained
# project. We run it in CI.
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["livecheck.py", "make_icon.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
